feat: complete new versions logic
